[package]
name = "chump2csv"
version = "0.1.7"
authors = ["miyachan <wakarimasenco@gmail.com>"]
edition = "2018"
repository = "https://github.com/miyachan/chump2csv"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysqldump-mutator = { git = "https://github.com/Couragium/mysqldump-mutator-rs", rev = "02db9f3" }
pretty_env_logger = "0.4.0"
log = "0.4.11"
structopt = "0.3.17"
csv = "1.1.3"
memchr = "2.3.3"
chrono = "0.4.15"
chrono-tz = "0.5.3"
lru = "0.6.0"
fnv = "1.0.7"
